--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -12,7 +12,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:layout_marginTop="30dp">
 
         <ImageButton
             android:id="@+id/btnDeletePost"
@@ -34,17 +35,15 @@
             android:layout_marginBottom="12dp"
             android:gravity="center_vertical">
 
-            <TextView
+            <ImageView
                 android:id="@+id/postProfileImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:src="@drawable/circle_bg"
                 android:background="@drawable/circle_bg"
-                android:gravity="center"
-                android:text="A"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginEnd="12dp"/>
+                android:scaleType="centerCrop"
+                android:layout_marginEnd="12dp"
+                android:contentDescription="Avatar"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
