--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -5,9 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:layout_marginTop="30dp"
-
+    android:layout_marginTop="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingTop="12dp"
@@ -54,17 +52,29 @@
         tools:text="Comentário..."
         android:textSize="14sp"
         android:textColor="#333333"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="@id/commentUser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/commentUser" />
+
+    <ImageView
+        android:id="@+id/commentAttachedImage"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        android:background="@drawable/bg_search_outline"
+        app:layout_constraintStart_toStartOf="@id/commentUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/commentContent"/>
 
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#F0F0F0"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/commentContent"
+        app:layout_constraintTop_toBottomOf="@id/commentAttachedImage"
         app:layout_constraintStart_toStartOf="@id/commentUser"
         app:layout_constraintEnd_toEndOf="parent"/>
 
