--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,10 +8,13 @@
     android:padding="24dp"
     android:gravity="center_horizontal"
     android:background="#FFFFFF"
-    android:fitsSystemWindows="true"> <TextView
+    android:fitsSystemWindows="true">
+
+    <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Editar Perfil"
+    android:textColor="#000000"
     android:textSize="24sp"
     android:textStyle="bold"
     android:paddingTop="16dp"
