--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -4,31 +4,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="24dp"
+    android:padding="25dp"
     android:layout_marginTop="30dp"
     android:background="#FFFFFF"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Criar Publicação"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="24dp"
-        android:textColor="#000000"/>
+        android:layout_marginBottom="20dp">
 
+        <ImageButton
+            android:id="@+id/btnBackSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_back"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Criar Publicação"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
     <EditText
         android:id="@+id/inputPostContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="120dp"
+        android:minHeight="140dp"
         android:background="#F5F5F5"
         android:padding="16dp"
         android:hint="O que queres partilhar hoje?"
         android:gravity="top|start"
         android:inputType="textMultiLine"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/btnSelectPhoto"
@@ -38,7 +52,7 @@
         android:drawableStart="@android:drawable/ic_menu_gallery"
         android:drawablePadding="8dp"
         android:backgroundTint="#EEEEEE"
-        android:textColor="#333333"
+        android:textColor="#000000"
         android:layout_marginBottom="16dp"/>
 
     <RelativeLayout
