--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -108,12 +108,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
+                        android:textColor="#000000"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Seguidores"
+                        android:textColor="#000000"
                         android:textSize="12sp"/>
                 </LinearLayout>
                 <LinearLayout
@@ -126,12 +128,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
+                        android:textColor="#000000"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="A Seguir"
+                        android:textColor="#000000"
                         android:textSize="12sp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -195,7 +199,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:visibility="gone"  android:layout_marginTop="32dp">
+                android:visibility="gone"
+                android:layout_marginTop="32dp">
 
                 <ImageView
                     android:layout_width="80dp"
