--- a/app/src/main/res/layout/activity_public_profile.xml
+++ b/app/src/main/res/layout/activity_public_profile.xml
@@ -5,8 +5,16 @@
     android:orientation="vertical"
     android:padding="24dp"
     android:background="#FFFFFF"
-    android:layout_marginTop="30dp"
-    android:gravity="center_horizontal">
+    android:layout_marginTop="30dp">
+
+    <ImageButton
+        android:id="@+id/btnBackComments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="Voltar"/>
 
     <ImageView
         android:id="@+id/publicProfileImage"
@@ -15,6 +23,7 @@
         android:src="@drawable/circle_bg"
         android:background="@drawable/circle_bg"
         android:scaleType="centerCrop"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"/>
 
     <TextView
@@ -24,7 +33,8 @@
         android:text="Carregando..."
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/publicProfileCourse"
@@ -33,14 +43,16 @@
         android:text="..."
         android:textSize="16sp"
         android:textColor="#757575"
-        android:layout_marginBottom="24dp"/>
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginBottom="24dp">
+        android:layout_marginBottom="24dp"
+        android:layout_gravity="center_horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -90,6 +102,7 @@
         android:layout_height="wrap_content"
         android:text="Seguir"
         android:backgroundTint="#6200EE"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
